Convert to Cobertura

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,4 @@
 language: java
-script: mvn --show-version --errors clean verify jacoco:report coveralls:jacoco
+script: mvn --show-version --errors clean verify
+after_success:
+  - mvn clean cobertura:cobertura coveralls:cobertura
