--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <developerConnection>scm:git:git@github.com:gerryai/planning-common.git</developerConnection>
         <url>https://github.com/gerryai/planning-common</url>
     </scm>
+
     <modules>
         <module>examples</module>
         <module>model</module>
@@ -87,22 +88,21 @@
                 <version>2.17</version>
             </plugin>
             <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.0.201403182114</version>
-                <executions>
-                    <execution>
-                        <id>prepare-agent</id>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <format>xml</format>
+                    <maxmem>256m</maxmem>
+                    <!-- aggregated reports for multi-module projects -->
+                    <aggregate>true</aggregate>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.eluder.coveralls</groupId>
                 <artifactId>coveralls-maven-plugin</artifactId>
                 <version>2.2.0</version>
+                <configuration><dryRun>true</dryRun></configuration>
             </plugin>
         </plugins>
     </build>
